--- a/src/main/resources/i18n/messages_eng.properties
+++ b/src/main/resources/i18n/messages_eng.properties
@@ -3,14 +3,23 @@ label.submit   = Login
 label.title    = Login Page
 label.userName = User Name
 label.mail = Email
-label.category=categories
-label.drag=jewelry
-label.antiquesAndArt=antiques and art
-label.vintage=vintage
-label.collection=collection
-label.handmade=handmade
-label.main=main
-label.signin=signIn/signUp
-label.find=find
+label.category=Categories
+label.drag=Jewelry
+label.antiquesAndArt=Antiques and art
+label.vintage=Vintage
+label.collection=Collection
+label.handmade=Handmade
+label.main=Main
+label.signin=SignIn/SignUp
+label.find=Find
 label.signUp=SingUp
 label.ForgotYourPassword=Forgot Your Password?
+label.enterCode=Enter code
+label.enter=Enter
+label.Name=Enter your Name
+label.Surname=Enter your Surname
+label.Mail=Enter your Mail
+label.EnterPassword= Enter your Password
+label.registr=Registration
+label.Login=Login
+label.
