--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -1,16 +1,24 @@
-label.password = Password
-label.submit   = Login
+label.password = Пароль
+label.submit   = Вход
 label.title    = Login Page
-label.userName = User Name
-label.mail = pochta
-label.category=categoryy
-label.drag=dragocennosty i ucrashenya
-label.antiquesAndArt=anticvariat i iscusstvo
-label.vintage=vintage
-label.collection=Collekcionnoe
-label.handmade=Sdelano rukamy
-label.main=Glavnaya
-label.signin=signIn/signUp
-label.find=find
-label.signUp=SingUp
-label.ForgotYourPassword=Zabili parol?
+label.userName = Имя
+label.mail = Почта
+label.category=Категории
+label.drag=Драгоценности и украшения
+label.antiquesAndArt=Антиквариат и искусство
+label.vintage=Винтаж
+label.collection=Коллекционное
+label.handmade=Сделано руками
+label.main=Главная
+label.signin=Вход/Регистрация
+label.find=Поиск
+label.signUp=Регистрация
+label.ForgotYourPassword=Забыли пароль?
+label.enterCode=Введите код
+label.enter=Ввод
+label.Name=Введите имя
+label.Surname=Введите фамиля
+label.Mail=Введите почту
+label.EnterPassword= Введите импароль
+label.registr=Регистрация
+label.Login=Вход
