--- a/src/main/resources/i18n/messages_eng.properties
+++ b/src/main/resources/i18n/messages_eng.properties
@@ -22,4 +22,4 @@ label.Mail=Enter your Mail
 label.EnterPassword= Enter your Password
 label.registr=Registration
 label.Login=Login
-label.
+label.lk=Private office
