--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -22,3 +22,4 @@ label.Mail=Введите почту
 label.EnterPassword= Введите импароль
 label.registr=Регистрация
 label.Login=Вход
+label.lk=Личный кабинет
